@@ -96,6 +96,23 @@ class Sys::IO {
   
   native static method readlink : int ($path : string, $buf : mutable string, $bufsiz : int);
   
+  static method readlinkp : string ($file : string) {
+    my $stat = Sys::IO::Stat->new;
+    
+    my $status = Sys::IO::Stat->lstat($file, $stat);
+    
+    my $link_text = (string)undef;
+    if ($status == 0) {
+      if (($stat->st_mode & IO->S_IFMT) == IO->S_IFLNK) {
+        my $link_text_length = (int)$stat->st_size;
+        my $link_text = (mutable string)new_string_len $link_text_length;
+        &readlink($file, $link_text, $link_text_length);
+      }
+    }
+    
+    return $link_text;
+  }
+  
   native static method opendir : Sys::IO::DirStream ($dir : string);
   
   native static method closedir : int ($dirp : Sys::IO::DirStream);
