@@ -1348,6 +1348,44 @@ class TestCase::Sys::IO {
     return 1;
   }
   
+  static method readlinkp : int ($test_dir : string) {
+    
+    my $file = "$test_dir/foo.txt";
+    {
+      my $stream = Sys::IO->fopen($file, "wb");
+      
+      unless ($stream) {
+        return 0;
+      }
+      Sys::IO->fclose($stream);
+    }
+    
+    my $file_symlink = "$test_dir/foo_link";
+    {
+      my $status = Sys::IO->symlink($file, $file_symlink);
+      
+      unless ($status == 0) {
+        return 0;
+      }
+      
+      my $exists_symlink_file = Sys::FileTest->l($file_symlink);
+      unless ($exists_symlink_file) {
+        return 0;
+      }
+    }
+    
+    {
+      my $buffer = (mutable string)new_string_len 255;
+      my $ret_file = Sys::IO->readlinkp($file_symlink);
+      
+      unless ($ret_file eq $file) {
+        return 0;
+      }
+    }
+    
+    return 1;
+  }
+  
   static method readline : int ($test_file_dir : string) {
     
     # Basic
