@@ -1,6 +1,11 @@
 0.39 2022-02-14
   [Compatible Intenal Changes]
     * Removed unused the Sys::Util class.
+  [New Features]
+    * Added the readlinkp method in the Sys::IO class.
+    
+      static method readlinkp : int ($test_dir : string);
+  
 0.38 2022-02-09
   [Bug Fix]
     * Fixed the bug that the fwrite and fread method in the Sys::IO class throw an exception in a wrong condition.
